fix jumped left image to various large viewports

--- a/style/default.css
+++ b/style/default.css
@@ -54,6 +54,10 @@ h1, h2 {
     display: hide;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
 a {
     color:inherit;
     text-decoration: none;
@@ -79,3 +83,9 @@ button {
         padding: 0 42px;
    }
 }
+
+@media (max-width: 1000px) {
+    .container {
+         padding: 0 39px;
+    }
+ }
