--- a/style/hero.css
+++ b/style/hero.css
@@ -57,3 +57,95 @@
 .hero__down:hover .hero__down-img {
     filter: drop-shadow(4px 7px 20px var(--second-color)); 
 }
+
+@media (max-width: 1440px) {
+    .hero__img {
+        width: 41vw; /* static viewported(procented) width to fix left image width's lost */
+    }
+
+    .hero__left {
+        margin-left: -70px;
+        margin-right: 55px;
+    }
+
+    .hero__right {
+        max-width: 550px;
+    }
+
+    .hero__title {
+        font-size: 60px;
+        /* margin-bottom: 25px; */
+    }
+
+    .hero__description {
+        font-size: 24px;
+    }
+}
+
+@media (max-width: 1200px) {
+    .hero__left {
+        margin-left: -42px;
+    }
+
+    .hero__right {
+        max-width: 445px;
+    }
+
+    .hero__title {
+        font-size: 50px;
+        margin-bottom: 25px;
+    }
+
+    .hero__description {
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+    .hero__down {
+        max-width: 75px;
+        font-size: 16px;
+    }
+
+    .hero__down-img{
+        width: 65px;
+        margin-bottom: 9px;
+    }
+ }
+
+ @media (max-width: 1000px) {
+
+    .hero__left {
+        margin-left: -39px;
+        margin-right: 50px;
+    }
+
+    .hero__right {
+        max-width: 360px;
+    }
+
+    .hero__title {
+        font-size: 40x;
+        margin-bottom: 20px;
+    }
+
+    .hero__description {
+        font-size: 16px;
+    }
+
+    .hero__down {
+        max-width: 66px;
+        font-size: 14px;
+    }
+
+    .hero__down-img{
+        width: 40px;
+        margin-bottom: 7px;
+    }
+
+ }
+
+ @media (max-width: 760px) {
+}
+
+ @media (max-width: 580px) {
+ }
